mesa: fix uninitialized var warning

http://bugs.freedesktop.org/show_bug.cgi?id=31067